--- a/lazy-ear/build.gradle
+++ b/lazy-ear/build.gradle
@@ -24,7 +24,7 @@ repositories {
 dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    deploy project(path:':TarjetaEJB', configuration:'archives')
+   // deploy project(path:':TarjetaEJB', configuration:'archives')
     deploy project(path:':TarjetaWEB', configuration:'archives')
     earlib 'org.jboss.logging:jboss-logging:3.1.4.GA'
 }
