--- a/lazy/build.gradle
+++ b/lazy/build.gradle
@@ -9,6 +9,8 @@ task wrapper(type: Wrapper) {
 apply plugin: 'java'
 apply plugin: 'war'
 
+group = 'co.com.lazy'
+
 sourceCompatibility = 1.8
 
 repositories {
